# accounting-python-api

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
accounting/: admin.py  urls.py
accounting/auth/: custom_auth_token.py
accounting/data/: expenses.csv  merchants.csv  projects.csv
accounting/migrations/: 0001_initial.py  0002_alter_expense_details.py  0003_alter_merchant_unique_together.py  0004_alter_project_unique_together.py
accounting/models/: expense.py  merchant.py  project.py
accounting/serializers/: expense_serializer.py  merchant_serializer.py  project_serializer.py  user_serializer.py
accounting/tests/: test_demo_data_util.py  test_expense_model.py
accounting/utils/: demo_data_util.py
accounting/views/: expense_view_set.py  merchant_view_set.py  project_view_set.py  user_view_set.py
core/: settings.py  urls.py
